--- a/diretivas/angular.json
+++ b/diretivas/angular.json
@@ -119,6 +119,12 @@
           }
         }
       }
-    }},
-  "defaultProject": "diretivas"
+    }
+  },
+  "defaultProject": "diretivas",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
