--- a/rotas-atualizado/angular.json
+++ b/rotas-atualizado/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "rotas-atualizado"
+  "defaultProject": "rotas-atualizado",
+  "cli": {
+    "analytics": false
+  }
 }
